kubernetes/_clusters/firefly/miscellaneous/headlamp/middleware-p1-staging-eks.enc.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
    name: headlamp-inject-token-p1-staging-eks
    namespace: misc
spec:
    headers:
        customRequestHeaders:
            Authorization: Bearer eyJhbGciOiJSUzI1NiIsImtpZCI6IkVyOWN0d2pDTmNRa3prQllJSG9RZW9tMkgyOGd4V3VJSW9PS3FUVjFFS1kifQ.eyJpc3MiOiJrdWJlcm5ldGVzL3NlcnZpY2VhY2NvdW50Iiwia3ViZXJuZXRlcy5pby9zZXJ2aWNlYWNjb3VudC9uYW1lc3BhY2UiOiJoZWFkbGFtcCIsImt1YmVybmV0ZXMuaW8vc2VydmljZWFjY291bnQvc2VjcmV0Lm5hbWUiOiJoZWFkbGFtcC1hZG1pbi10b2tlbiIsImt1YmVybmV0ZXMuaW8vc2VydmljZWFjY291bnQvc2VydmljZS1hY2NvdW50Lm5hbWUiOiJoZWFkbGFtcC1hZG1pbiIsImt1YmVybmV0ZXMuaW8vc2VydmljZWFjY291bnQvc2VydmljZS1hY2NvdW50LnVpZCI6ImFiMjJmNmR [...]
sops:
    age:
        - recipient: age1yj3wdeleng98w9rv46yh40ettc78r9k4r4wgnx7ja5zxmyt8qe7snjg0a0
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBPeGtONHlvc2x2b3hhT2NM
[...]
            xZTEg/TF5HtzEonr67CgzNpyp08exMWSDiXmorHXgS4XXRJeJ3n5CQ==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2026-01-03T18:55:27Z"
    mac: ENC[AES256_GCM,data:qdObnhoL2wDjBwjYrxWF/oT0eeSSUiVngHwiBbyNMPB4UpQNdU/kwPMkguzU6st4j/twIKxni8MBFMsnqo+D1w5BrpQKKZ/qHCwavJ95JGPRwu1jeEAFcB0ksLtRHRUk6SJSfDY1cTne2DA4URkYkWyJabkrGENA1Iu3LZQ3/7Y=,iv:VthlYpULsaESLR7zMUXmxtDru1N402U4GRSI0N5SufA=,tag:35hNo3phwL3zuP7yvSu7Tw==,type:str]
    encrypted_regex: ^(data|stringData)$
    version: 3.11.0
