kubernetes/_clusters/firefly/miscellaneous/headlamp/middleware-pr-acc-eurofiber.enc.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
    name: headlamp-inject-token-pr-acc-eurofiber
    namespace: misc
spec:
    headers:
        customRequestHeaders:
            Authorization: ENC[AES256_GCM,data:4BRC5hRefTJsGHJGMfCA04+e2TD3Pgvug+SAxc+x7TZTw8OomolYW4tTetNctX2TFVUikcdJb1pc++OveZpFot9FgWQjalQ06PYkPWHqkD+Tv5cyF/gHVOVdZep/Q8Efnb0oMEC85RxnqKfXuoQmdCRVNnFDwFE+NsJ1RIdox0123MR8nIL/NnXpxWLvpGm60n3ekdtPrhkst6VTig9gL4hHNEgyGcIWnDyApnvr0DoVkVGj4igJDWdt0zwYlruLSxx45PcPJ9HSYii1FZHtJsmKUmN957i3k3KKdIL7yS3TgTLsnimeqADAqjsGdP5WUq/CnWMQ5nsUhdSygIhVFg6IGgwgyNx4VoCF3Bsw+02JgjbqWLW6f9X9WsBpe4quMyB5mPxIp0im1p7mPJSKKyPQWuWDbihqY5JjQS7d0Tew+czj3V6O30V0HRN0kKbLHwx8c [...]
sops:
    age:
        - recipient: age1yj3wdeleng98w9rv46yh40ettc78r9k4r4wgnx7ja5zxmyt8qe7snjg0a0
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBhN25iWlp2dzJ3QXVieU1u
[...]
            T0PeyJBe/q0JFNekHQu4srjhpXF6hj+F/Z6cLZgTZzfhcIkrhDvE/w==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2026-04-04T10:09:52Z"
    mac: ENC[AES256_GCM,data:oNnBWm9HVG7CeNv5OimxXz9rXh6MpN1wvViG9PPH57QXcC47Uqb9UXYmaRmRxYAq4i2mSpWJjU+8YO6SfU9OiGd/wNQ8j2FQIBa7xDY1yJLZaWW/QOhguenK1hNDoJIzSwSITW/c/JfM+xGOUxXTp/W78Ws+4fkqGLkd9XwDesM=,iv:I7QrLzSSK25SqUWOldPhbpSTZ5GQYTq/wz6ieELXGP4=,tag:A9sKsHLhQZjilgvOMYfdnw==,type:str]
    encrypted_regex: ^(Authorization)$
    version: 3.11.0
