kubernetes/_clusters/firefly/miscellaneous/headlamp/middleware-pr-nonprod-aks.enc.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
    name: headlamp-inject-token-pr-nonprod-aks
    namespace: misc
spec:
    headers:
        customRequestHeaders:
            Authorization: Bearer eyJhbGciOiJSUzI1NiIsImtpZCI6IkhYcTd3em1mYkhoOVhHZERWNW5jLUFta2xkc1JDZzk3NHRyS2x5ZVpoclUifQ.eyJpc3MiOiJrdWJlcm5ldGVzL3NlcnZpY2VhY2NvdW50Iiwia3ViZXJuZXRlcy5pby9zZXJ2aWNlYWNjb3VudC9uYW1lc3BhY2UiOiJoZWFkbGFtcCIsImt1YmVybmV0ZXMuaW8vc2VydmljZWFjY291bnQvc2VjcmV0Lm5hbWUiOiJoZWFkbGFtcC1hZG1pbi10b2tlbiIsImt1YmVybmV0ZXMuaW8vc2VydmljZWFjY291bnQvc2VydmljZS1hY2NvdW50Lm5hbWUiOiJoZWFkbGFtcC1hZG1pbiIsImt1YmVybmV0ZXMuaW8vc2VydmljZWFjY291bnQvc2VydmljZS1hY2NvdW50LnVpZCI6IjFjNTk3ZGI [...]
sops:
    age:
        - recipient: age1yj3wdeleng98w9rv46yh40ettc78r9k4r4wgnx7ja5zxmyt8qe7snjg0a0
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBaSm0vTXVtMzZveFRteFJW
[...]
            aTuY0r2n2fcbTyXJWRLIBtozdYnrqjRlfH3IY8WeNp5lxREp2x8icQ==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2026-01-03T19:46:15Z"
    mac: ENC[AES256_GCM,data:wabxoyyMStjbvqlzMpzDFDayTIAnNX9hndvXd6gNT/2VRaogu+Esk5xZMnnKn3Ug3BvEfMFXF3sX8yVU+wz7+iEMs8Bd6hz1zXYLJHg+Scft+upqvS8hNtm+kIrKwod218LEsKmOssCevO9jWCatCuUzrBuOCVLPswR29Gpj9k0=,iv:pnkXRZ2PfkwRq4s+kgri6EQDw6hQdCQryYDy+6oWrsQ=,tag:5d+OD0I6GXtWHSiWKdnRfw==,type:str]
    encrypted_regex: ^(data|stringData)$
    version: 3.11.0
