kubernetes/_clusters/firefly/miscellaneous/headlamp/middleware-staging.enc.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
    name: headlamp-inject-token-staging
    namespace: misc
spec:
    headers:
        customRequestHeaders:
            Authorization: Bearer eyJhbGciOiJSUzI1NiIsImtpZCI6IkVyOWN0d2pDTmNRa3prQllJSG9RZW9tMkgyOGd4V3VJSW9PS3FUVjFFS1kifQ.eyJpc3MiOiJrdWJlcm5ldGVzL3NlcnZpY2VhY2NvdW50Iiwia3ViZXJuZXRlcy5pby9zZXJ2aWNlYWNjb3VudC9uYW1lc3BhY2UiOiJoZWFkbGFtcCIsImt1YmVybmV0ZXMuaW8vc2VydmljZWFjY291bnQvc2VjcmV0Lm5hbWUiOiJoZWFkbGFtcC1hZG1pbi10b2tlbiIsImt1YmVybmV0ZXMuaW8vc2VydmljZWFjY291bnQvc2VydmljZS1hY2NvdW50Lm5hbWUiOiJoZWFkbGFtcC1hZG1pbiIsImt1YmVybmV0ZXMuaW8vc2VydmljZWFjY291bnQvc2VydmljZS1hY2NvdW50LnVpZCI6ImFiMjJmNmR [...]
sops:
    age:
        - recipient: age1yj3wdeleng98w9rv46yh40ettc78r9k4r4wgnx7ja5zxmyt8qe7snjg0a0
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBPeGtONHlvc2x2b3hhT2NM
[...]
            xZTEg/TF5HtzEonr67CgzNpyp08exMWSDiXmorHXgS4XXRJeJ3n5CQ==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2026-01-02T18:39:59Z"
    mac: ENC[AES256_GCM,data:D+2ifrZYbOTNiUjsKCTs4xPTFtAs/vOV6EXhDr8p5FU05bM1zOWqxPnzQJrFmMQAMf9DR/B2nzjS53k0qfA3mpDE+Run7lv4A4VjBeuQtzhfcUeeRNVz7VQUa6f8IVlUkq8Nfkg0gnPjzxHsmIOClk1I+mrK6WolKw1KI7KFmWk=,iv:NsPrK/l3Kx4emNj8XJ+CDWgVBwZFvAoOKIbvH689lYA=,tag:sNS8JjV0WMV74kQ/uYCxxw==,type:str]
    encrypted_regex: ^(data|stringData)$
    version: 3.11.0
