kubernetes/_clusters/firefly/miscellaneous/headlamp/tunnel-pr-acc-eurofiber.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pr-acc-eurofiber-apiserver-tunnel
  namespace: misc
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: pr-acc-eurofiber-apiserver-tunnel
  template:
    metadata:
      labels:
        app.kubernetes.io/name: pr-acc-eurofiber-apiserver-tunnel
    spec:
      nodeSelector:
        kubernetes.io/hostname: ff-pi1
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      containers:
        - name: tunnel
          image: alpine:3.20
          imagePullPolicy: IfNotPresent
          command:
            - /bin/sh
            - -c
          args:
            - |
              [...]
          ports:
            - containerPort: 7443
              name: https
              protocol: TCP
          readinessProbe:
            tcpSocket:
              port: https
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: https
            initialDelaySeconds: 30
            periodSeconds: 30
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              memory: 128Mi
          volumeMounts:
            - name: ssh-auth
              mountPath: /ssh-auth
              readOnly: true
      volumes:
        - name: ssh-auth
          secret:
            secretName: pr-acc-eurofiber-apiserver-tunnel-ssh
            defaultMode: 0400
---
apiVersion: v1
kind: Service
metadata:
  name: headlamp-pr-acc-eurofiber-apiserver
  namespace: misc
spec:
  selector:
    app.kubernetes.io/name: pr-acc-eurofiber-apiserver-tunnel
  ports:
    - name: https
      port: 443
      targetPort: https
