kubernetes/_clusters/firefly/miscellaneous/headlamp/tunnel-pr-acc-eurofiber-web.enc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: pr-acc-eurofiber-web-tunnel
    namespace: misc
spec:
    replicas: ENC[AES256_GCM,data:LA==,iv:XO89lYIRMBxVZm98ns8hO8BXqWZg/4dBsxsCDyvgzc0=,tag:RhVjS6Dc04wky3dkLpdTUQ==,type:int]
    selector:
        matchLabels:
            app.kubernetes.io/name: ENC[AES256_GCM,data:5GeaH+G5zeVzR+0WM8iiSigiN9ckNjsJyclS,iv:O7Hc9tuagXybmTQ+xE5f5vpPO1Te4N38LcWEkfEJZk0=,tag:C3sAQ/E6hFUIuYsUosHEKQ==,type:str]
    template:
        metadata:
            labels:
                app.kubernetes.io/name: ENC[AES256_GCM,data:+N42Mjck1i7JFCpH+9zIy49pr+qjy1fckB9e,iv:igcsc4xpVRZJSjx9OwE2vXta4hToMpLhrfeA5vwk9Eo=,tag:+uUxUDlVg1XOvE75mMhr2A==,type:str]
        spec:
            containers:
                - name: ENC[AES256_GCM,data:JpilDRzW,iv:ME4F9EH6CBCY1tcdZTba6XWfZdKHaCqTCnIep/WHByk=,tag:jova1kWTatJS8rtceCoRZQ==,type:str]
                  image: ENC[AES256_GCM,data:CCx7vbEGIqpLsp8=,iv:qzL0lmka0mjDATbKkx2/dR4hiwJHjNuyY4vX6543hqQ=,tag:fugngfTdhuwnanJ9Qoztng==,type:str]
                  imagePullPolicy: ENC[AES256_GCM,data:au9tgUt2L0GrN6YC,iv:TfCk7f6gV9796JkKGumpbgyWgZAcOfxgcKGKk1WauuI=,tag:UgWUOvqOgpqtF7ASNsg38g==,type:str]
                  command:
                    - ENC[AES256_GCM,data:+0N2o5PhEA==,iv:2vpzl5ELWC0JpRvUlo9Mtq52V4eo7EZpOEkUqRhrCGk=,tag:v9xty/P0qJUh+JOgBKXDJg==,type:str]
                    - ENC[AES256_GCM,data:+mg=,iv:43VMiKX4X5pffy7xIw+RmSoepL6DqZnhnVVcY57vtxc=,tag:D0/lASBJNlom/Zfw7xofsw==,type:str]
                  args:
                    - ENC[AES256_GCM,data:iga2T/zVN4POMoqbr3SeKuh1fV5BhWaz/Dd5DvFw58frgGFIKEQ0PsSs91OTR4N8Q9fAf6MnjdwFxeNBP07aCEWFFRQObE0tWK7R2XIfkSoQXEJHtADsYP41+mT3DbehvYRqB0wSiyG3UwJxM2we2thv3rc9UBSBkpl4/urJ8mft/mYZmwaOWtxPQclO/4+f+AQUoG0xMhZziIWrqXc/5fO57V5dAJbOYLzvK9g5JDm96YoEqvweW1EItvGfkvgW7cwkrAZuUFjgMGDoYD83eNi8W+xATEt77y1XWfsKzipzsgNIrutkwGINIxNIxpi44eUMm44KL/LBQuCxdQ9ChvO7RmcnDsVUCeTiDTqBfRfi/OmCklO93oQnqfoLKSTFNdZOj381orE/IdtjOcevXVevG2DAm9Ktjbwkut5JyMA8vhc7h8pwj03RPmmhEvYFGvo1FVcafd [...]
                  ports:
                    - containerPort: ENC[AES256_GCM,data:/M836w==,iv:T7xhe2Mb5c4Q4aoZxDAf9R8Opnxux6f00lCP1wXY3zk=,tag:7cA5RpMXsUgMySjzcGkCvw==,type:int]
                      name: ENC[AES256_GCM,data:51QhNw==,iv:fC0b8DkxlCh+L81uFVR4dJ1vBXQt7WhkJOQFmrc4bWE=,tag:oHh55z5cfLLrvS46WZXUIw==,type:str]
                      protocol: ENC[AES256_GCM,data:0IsY,iv:6uaJfhMzrgiJkU0W0V37WZaY+2DFwQSmiIqh275WGgY=,tag:kkvGS/SBjm9/3ujp+QphSw==,type:str]
                  readinessProbe:
                    tcpSocket:
                        port: ENC[AES256_GCM,data:n8brTA==,iv:JkPpOHCTUIvlaof3zNL7YbAJxDsAIfh2SR9+PC/2Df4=,tag:Qav1f2HgArFRWnBvCoHQJg==,type:str]
                    initialDelaySeconds: ENC[AES256_GCM,data:wzw=,iv:Fd37pIBSDOAsxN34Z4Zx3lkSuwYGUUqF0f2LM4mnQo4=,tag:TPVWW4JTYqOpomQHJryuEA==,type:int]
                    periodSeconds: ENC[AES256_GCM,data:ZTY=,iv:UIUH3nItKJu2bNP20vMQlIoZPZ9IGrpj6POShJIdL14=,tag:2FIiriSdQjAllomp+2xK0Q==,type:int]
                  livenessProbe:
                    tcpSocket:
                        port: ENC[AES256_GCM,data:xe6/uQ==,iv:b9vjKwGZ9zcIsOGXvL/qCE1VkDQwsfsBvjgmnyhxpm4=,tag:EaYPTkzTOcA8zILghGPlEQ==,type:str]
                    initialDelaySeconds: ENC[AES256_GCM,data:Ln4=,iv:1p9XcBB9fGsaFs8C29UJRVeICnL6W0kFVYvIWw3LGwk=,tag:G1uwG4MLy7ky3+WD0OSvZw==,type:int]
                    periodSeconds: ENC[AES256_GCM,data:mTE=,iv:LJc4Nl7IsstQTCzspEq6yX7XdyUfxCfoPxgEawC9IHQ=,tag:UVpduGAC3wUayZZWQRC1LQ==,type:int]
                  resources:
                    requests:
                        cpu: ENC[AES256_GCM,data:WAKM,iv:FOX5OcMLsHfb0op3//WN1HzuTOMQsa0o0//Eif6w1hY=,tag:OJd9+UArJP96lUloAYCEeg==,type:str]
                        memory: ENC[AES256_GCM,data:xzJgZQ==,iv:MjDoJhcIHcvB/vwPA/+jJ0RpptYXEmgweDRFjJHG6is=,tag:x7uvIYV3bEi/KsQm9uqdPA==,type:str]
                    limits:
                        memory: ENC[AES256_GCM,data:uOJ1q9M=,iv:FUtsoB5wkZsWYvRWAOWMbXiUpauLSoQjm15w//XMnTo=,tag:WR8KHX5xv2C9/Ef7RSmxyw==,type:str]
                  volumeMounts:
                    - name: ENC[AES256_GCM,data:88OjB4/YVf94bZc=,iv:cUCEDcyYvUTjz4Cdb6ZB33SOurNMSRgyeUizPtF9R/o=,tag:0bCzRTNPyz3dVhM35Clt2A==,type:str]
                      mountPath: ENC[AES256_GCM,data:0THk21mTzixQUtqB,iv:CyvwunBeyGNOTlWkKONLeBQn3tyA7Lb1VZCpL25+yLs=,tag:W3vy2OmmTZgfowGqOF9+IA==,type:str]
                      readOnly: ENC[AES256_GCM,data:zLm7wQ==,iv:nUBl3C51DSwAO/KfOTrNDnoijXa0kMM+3uXSrcSvdHA=,tag:EiwzFVjq0uEup51Vgq3Fbg==,type:bool]
            volumes:
                - name: ENC[AES256_GCM,data:euLmfixkusbR+NU=,iv:mXIJ8lYfCHKxZidQnzVXliL8mF4IUSrJ3SWO/dOr/0I=,tag:cjnqGQKF1bFd63FwJJfcgw==,type:str]
                  secret:
                    secretName: ENC[AES256_GCM,data:dAFlLwBoetyyP1A1f8Nnljv0M0Y=,iv:N0lI1Sf20dJC2ov5rINPZgQhVgAwM1EGhEKlgGWnrUw=,tag:So99DOC7zT2AXCH0SPTKzA==,type:str]
sops:
    age:
        - recipient: age1yj3wdeleng98w9rv46yh40ettc78r9k4r4wgnx7ja5zxmyt8qe7snjg0a0
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSArUFcwRzJlWThha3hrWGRF
[...]
            MpvjdNeMO+69j+DlMjrmso1I2amtK3QAlOdvFXKUFpi94dj7AhGk9Q==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2026-04-15T17:57:51Z"
    mac: ENC[AES256_GCM,data:1Rwnyf93DfEh5+4M4DJF6aYAwRa6zWKrDOf2RFmB3aBAndSgzE6AT367/gN6OQsZbwJnzdkqKq6nCdje0iHdqwBm+4Es4J4Ux+NskjMkwcywlzGEW5BTXM3wyM/b7HGKIgTd4Mypstk8BL6RvroBzlLd4Xk07kOPVtXWCoAsh24=,iv:XBexNNZRW7Hd6Sl6KlrK5aen/GCZ8vXno9VStPgt/S8=,tag:clsDalZ5+BjWXvJrk9kOkQ==,type:str]
    encrypted_regex: ^(spec)$
    version: 3.11.0
---
apiVersion: v1
kind: Service
metadata:
    name: pr-acc-eurofiber-web-tunnel
    namespace: misc
spec:
    selector:
        app.kubernetes.io/name: ENC[AES256_GCM,data:ID9/n0OQtAoEcGPsPf8Y/fgca9w47fsqBOTW,iv:+87Zlh498JdSnJvArWrFd+RMUoaSC+sv1Lnn/G4ygj4=,tag:WOobbKUCgNoXscD/+y2Oig==,type:str]
    ports:
        - name: ENC[AES256_GCM,data:ilKQQg==,iv:tZ1lgMSV4wCI4ioJWv2zOYZhIAootiksX/a+7KEGtp4=,tag:4gOBWLssvWNLEt9XCEY26w==,type:str]
          port: ENC[AES256_GCM,data:rFE=,iv:duniU4cZyRoSYYFwyLo/Ylc/7Wm81AshtfBymQbWcso=,tag:lchQeqVpviZxnYeml0pxYw==,type:int]
          targetPort: ENC[AES256_GCM,data:vGFQaw==,iv:QapQBbBDkhK08knwIMMXgshSSzF1Ux2VkJ+PADK5CNU=,tag:Rug0sW6FqQiMDUNxj/NOuA==,type:str]
sops:
    age:
        - recipient: age1yj3wdeleng98w9rv46yh40ettc78r9k4r4wgnx7ja5zxmyt8qe7snjg0a0
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSArUFcwRzJlWThha3hrWGRF
[...]
            MpvjdNeMO+69j+DlMjrmso1I2amtK3QAlOdvFXKUFpi94dj7AhGk9Q==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2026-04-15T17:57:51Z"
    mac: ENC[AES256_GCM,data:1Rwnyf93DfEh5+4M4DJF6aYAwRa6zWKrDOf2RFmB3aBAndSgzE6AT367/gN6OQsZbwJnzdkqKq6nCdje0iHdqwBm+4Es4J4Ux+NskjMkwcywlzGEW5BTXM3wyM/b7HGKIgTd4Mypstk8BL6RvroBzlLd4Xk07kOPVtXWCoAsh24=,iv:XBexNNZRW7Hd6Sl6KlrK5aen/GCZ8vXno9VStPgt/S8=,tag:clsDalZ5+BjWXvJrk9kOkQ==,type:str]
    encrypted_regex: ^(spec)$
    version: 3.11.0
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: pr-acc-eurofiber-web-tunnel
    namespace: misc
spec:
    ingressClassName: ENC[AES256_GCM,data:acHrbMrNag==,iv:7W+B9YcrabMLfDsvHyurX6smdTwls9Ne8d6xvFjPqoY=,tag:E+CmaQmAFaKUA4fOgVzltA==,type:str]
    rules:
        - host: ENC[AES256_GCM,data:n/4VDHji/swRe5ZsZcmhLdggGVdrxqljHIweSxyYXDRrdHo=,iv:oyAQDLIOM6xNRqmCLkmQiyQ4HU2lLPnvC8ZzZ7eDufg=,tag:cFVqcgPZaludxXUr1w66ew==,type:str]
          http:
            paths:
                - path: ENC[AES256_GCM,data:xg==,iv:f6Zv5a3bp0pK29ux2j3Y0kQpbVx4gFS2LIaiUlGnF+8=,tag:1qVbekpQfw4TE2N2vehUbg==,type:str]
                  pathType: ENC[AES256_GCM,data:WJtep/AF,iv:V3s9xTKhrXRybF7N0U+k/t+9h0w0Z7K9Qay93azIW/k=,tag:fLcpqY6TaSDfg4fD+7XfjA==,type:str]
                  backend:
                    service:
                        name: ENC[AES256_GCM,data:+6CpuihimxPD0ifGkE2nkP+RCagr+lHsdRfv,iv:1taJMXVx9cydv3nIrVnc1l9FAlPJ1ZFK1XYLd+DZhkE=,tag:IZhloyr+J1TCwWG+ddaXnw==,type:str]
                        port:
                            number: ENC[AES256_GCM,data:Gww=,iv:a/jDbz8xZsN2zmKGwlJxu9y36TlK+x0kNZ6GTuYyqaY=,tag:xTpLCyTJ036j44DAyKuEuw==,type:int]
        - host: ENC[AES256_GCM,data:KOzsZKPgOVjyOed0tYOc+cVR4P28TrOD6VdfFOJmZg==,iv:ah6S/2JHq8p39lXam91+uYK3osEDc4et1/ROgc1C+Po=,tag:VM0jxOPJt1eY5KpF9HQ96g==,type:str]
          http:
            paths:
                - path: ENC[AES256_GCM,data:6w==,iv:oqpWQL+LipldgNz2DCO5DW6ciauStShaKosHDcFcBeU=,tag:+3EtbEFXkspeL/Q/hgjIjA==,type:str]
                  pathType: ENC[AES256_GCM,data:Rj5Clvkf,iv:4RQP1saqOzLupvksYpT2OOG4BmzLHTG+mgoMwp+U4eg=,tag:mD75MccNpPX7GeF+N0apyA==,type:str]
                  backend:
                    service:
                        name: ENC[AES256_GCM,data:G5nBWiM4k/DDmng2VJJv1//JfCdZfUuzFDBR,iv:XFqTSgOjwrCV2ldZV1YmMeWzljwb5l4jV8wJqL4TgV8=,tag:HWf9YajorwzwRK2a44qQrw==,type:str]
                        port:
                            number: ENC[AES256_GCM,data:CTM=,iv:HuROJCSCfdvYTMZNVRcuh7sJYpjacG0l2BktcofLSvo=,tag:5kgftoGOc+6ioRwSAAwzPQ==,type:int]
        - host: ENC[AES256_GCM,data:dxjTMMFhaqCG0QheP4jzR87s8LFLIA5F,iv:3OtlbA2p/DTPlsnP/TOdvk6ZfDdQ+40Rf1bJIwkxMTc=,tag:FhHpZzi/704tug773wMekg==,type:str]
          http:
            paths:
                - path: ENC[AES256_GCM,data:pw==,iv:GzSeN/NwtboT1LlXs/5V2QHGpKTEofJBgYspIbAjXuo=,tag:YtVwPETE7qFF/+2J4bQGJQ==,type:str]
                  pathType: ENC[AES256_GCM,data:FxEdhif1,iv:6WaIPzEJ8MBSeGbRZTyDy+nxpSb8MVKjm/mlZR8wbN0=,tag:Nz98OT+J3/XLKd+Ztpjt0g==,type:str]
                  backend:
                    service:
                        name: ENC[AES256_GCM,data:Y6OpscFvvTK+UllJXX+hqqSXrorxpSG58i63,iv:gVq9/EEH2pJkCC261U8PyJeo8lrPjk965kYXVHwYGPs=,tag:C+i2b8vAeZeolHN2G8JqIg==,type:str]
                        port:
                            number: ENC[AES256_GCM,data:mto=,iv:5IKh2Hbdzrvv5LvrtdiegMCHetUFDrNrg+JCyZ7wD8I=,tag:QG8IE0LgsFMHCZF7lmg+fw==,type:int]
        - host: ENC[AES256_GCM,data:mJiXtykpK8Y44Wdq9cVZoUxxW64=,iv:Mm7s6SB7tD2W3l0TE1Rwd1zzhZ+I/8+tRs/MrCYjnbM=,tag:1UWPtBjYUz6lxKNK62pjvw==,type:str]
          http:
            paths:
                - path: ENC[AES256_GCM,data:SQ==,iv:1+ExTiGxbOspC/uq3WDMK0l5CBQpeGJZXUpCZYjgGrI=,tag:xs9amDh8iZQUUs4d1rCGxg==,type:str]
                  pathType: ENC[AES256_GCM,data:G7Z6UN6i,iv:XXQe2pUh43JRTYq5ZTmEkPR1hmjLajM0qI29zuCYKEE=,tag:e/6Ogw8CESLIAKeutYaVag==,type:str]
                  backend:
                    service:
                        name: ENC[AES256_GCM,data:QjrAhRlNZ5rwocopW7Q8KFWp94VxK7lDbL5Q,iv:9pWJhJkg8Wgr1qj1/BUt+22WNFN/oseQLTuskljklXU=,tag:ylAejFU2FwJf+OFxH5T3xg==,type:str]
                        port:
                            number: ENC[AES256_GCM,data:d3k=,iv:cPzBbI7VmZ0FNoxYVR7tOAl2sxV95lfOSXIZwGgZZC8=,tag:34Whfn/xOTdpqcZwtlTZxw==,type:int]
        - host: ENC[AES256_GCM,data:eE2huwkHtTYm8FeXB/yNXclK8BxjvX3OyHjqIjPP04ILzQ==,iv:UcH2f6hiV4J99QmpEnYhqKWniYSQVEbbc6Y1O4QZ8BU=,tag:tse66apALGFdzHwye7L22w==,type:str]
          http:
            paths:
                - path: ENC[AES256_GCM,data:9g==,iv:tF5iWYL8kPIrqQp6JJMAMZHLeq1pqZpfH3R/q4RtGp0=,tag:jldRevvyNY5dJqL8cdjVmA==,type:str]
                  pathType: ENC[AES256_GCM,data:qa/+hsWR,iv:vrVkA6qd0u+I9ljX/yyBTvTVNDFOU592ZntAoGalQng=,tag:sW8diE2bPndrgjRYt9vhiw==,type:str]
                  backend:
                    service:
                        name: ENC[AES256_GCM,data:Y17n+dYTjKBT9hOMyOVNR7bIg3V1jVhk5QXo,iv:PZObeiO16VvVL5Z2Y8HOK1iInJwkfZn2whJxMKmFjug=,tag:5lpYj8ztasVPQo3QrPHrdQ==,type:str]
                        port:
                            number: ENC[AES256_GCM,data:alo=,iv:xp03Y/5cD5Np2LwSInDrTYwdbw3Krp1mJY0xNk1djIs=,tag:UKz9rRneklgf7sBwb7/Kpg==,type:int]
        - host: ENC[AES256_GCM,data:lUsCVjki/xO9hlm5vcVD+SsIPqIUgQ183Zf933kNAazHwKO+87iFq6E=,iv:YawcXyk8gaLsWcA5F7lQaWLInyvXEs0czsPrA1YkHjc=,tag:3tx3ga1NPtH+myxoX7Dc9w==,type:str]
          http:
            paths:
                - path: ENC[AES256_GCM,data:tQ==,iv:RZ50743XaAa/TzAT4yo8G7emmYw0Sod3jhVDdkHuIvA=,tag:a9yc4Xrogn5fuZTeTWbB0A==,type:str]
                  pathType: ENC[AES256_GCM,data:lyhW2Kpi,iv:zrbJzfB6qvwmI3qolrCRm3hAyAMJfAuM2EigCHzlJv8=,tag:JQiu2+fKoo5/7tBrGExIug==,type:str]
                  backend:
                    service:
                        name: ENC[AES256_GCM,data:ukH/geKKDmRsnPVCxW1ii1qxBxpDg0+YVrZp,iv:xmxzNFjF6hHmT00Gb5TB+64ChthEuoM+UCDllncl5ww=,tag:p2T2yPR5U3mbsBnmg2XKAw==,type:str]
                        port:
                            number: ENC[AES256_GCM,data:+Ms=,iv:ZojFo8GZUEDrDiCZxeuh13DJ8RtPU4IAa8VRQq8W8xY=,tag:v2a+eGMiauRRDZ+MC7Wnfg==,type:int]
        - host: ENC[AES256_GCM,data:0juCTHLyPC6RSr7/cMQgvFwtRFACM+7sRcBBkmHkHx8wbfQ=,iv:Fa0aw0v+wfBj31yR1pxgT1g3WoqYl97WMWdM69dPBGA=,tag:5ZS5qFxy7z1TF4jtJPg2gA==,type:str]
          http:
            paths:
                - path: ENC[AES256_GCM,data:nw==,iv:A+zTIRFHYgDC5QpdJkXS1Rq8CbEoJIMbUgD3fY35+ro=,tag:vcKWndidJeG+/Wz9V/3Rfg==,type:str]
                  pathType: ENC[AES256_GCM,data:FptxHLLY,iv:qw1fv1prZpaK/hwYeiaHUkk+NxKrvr8cU4OJrckh9d4=,tag:RSBsi54Bv0lOtoZqny8C7w==,type:str]
                  backend:
                    service:
                        name: ENC[AES256_GCM,data:EcvZRTCb0hWNc1YrfUhcZizUSmyhvGRcuFGj,iv:KKIVAb5eFtqBnYFrtJDCRg22KtYh/gg2PoTmX6c8fzQ=,tag:sMn5mIVz610u6GKxZfzQxA==,type:str]
                        port:
                            number: ENC[AES256_GCM,data:ixU=,iv:emjYYLI7hhcUFdb1e8Hvmq1BziRD1GIyO2z/ja2rnEE=,tag:h068O2Yso5GJddeuhivRrw==,type:int]
        - host: ENC[AES256_GCM,data:GDX1ztK4F2jxnueV+Qs6SsP2QXZ4rSfZ+2b0j1wvFho=,iv:Ijsht9zAPjH8yoSbAjJ8OzMP37pZ/pWZ+DOZdTXDnnw=,tag:8VEkmmazif/AETvrxbQwrA==,type:str]
          http:
            paths:
                - path: ENC[AES256_GCM,data:MA==,iv:VGlT5BzvN6kOcgaM5o7gKElODwq5O7AZ19MzAw5QD9s=,tag:NJnHwevwHAmiB0t5gw98kw==,type:str]
                  pathType: ENC[AES256_GCM,data:s0G0xm32,iv:Gr5Uzi4g6aFmkyM5h9+V/2EG+KAIlZg2hzRvjeuy9Bg=,tag:Gja6tSulIXw9Q6lio+82Rw==,type:str]
                  backend:
                    service:
                        name: ENC[AES256_GCM,data:2vwQcIER7jQcP8lxxhvRXuuHMm/H0v1Ojh2Q,iv:ps+PB/AM0HpV9bWduGDwaIPW6qH5vf3R1+qxI4bQtwI=,tag:8/l1sRo7Pj2LTwJ21i67PA==,type:str]
                        port:
                            number: ENC[AES256_GCM,data:L8c=,iv:n9ghWQGKYVzK/FW9b5w+SdCVO92EVkuw3NnTaBxF7eQ=,tag:rqjKPlSHRKTu2x1psbGb8Q==,type:int]
        - host: ENC[AES256_GCM,data:y5voFYuAWKjMkpZYiwPQ+Xv7fhSuWCop,iv:z1YhEVCPAe9RUMwUnUj9deVbkWggUK2VzXzVA09sxMA=,tag:8zMhSsuAg8gx7GlBIwZp6Q==,type:str]
          http:
            paths:
                - path: ENC[AES256_GCM,data:8w==,iv:vNuiqhuLReI9+O4Qmd3TmqYozNLkCX3Fr6VXhUfX8gI=,tag:2mNVKeLK+RyI4zWlc2xa8g==,type:str]
                  pathType: ENC[AES256_GCM,data:X8TFG30D,iv:Y9trk2ZIKx9g4/48oquOjLsxi1BTknWAjXUwyWmgtVw=,tag:RRxI+QR2MhCLDub3y7OO2Q==,type:str]
                  backend:
                    service:
                        name: ENC[AES256_GCM,data:bmOqfQ/8Lu80no/pgWUf/e3pwSqYBkSRqw2g,iv:GU5iYtxA8DzCGw45vnPxKwG11AD4KnhdD+6CWe8qrCg=,tag:raiZOvipwF998AmJpNaLAg==,type:str]
                        port:
                            number: ENC[AES256_GCM,data:VBY=,iv:rTzzO0tofdCOXK1sKApyQSzdkfzssyL5/uhH5XxTAU0=,tag:wi9T0fI7UeysuLwkxGPA8Q==,type:int]
    tls:
        - hosts:
            - ENC[AES256_GCM,data:F6JXjn+o8rLkAqR/QxgtiKj73GX6TGvwtfJzHRo5mYSWSws=,iv:juN77rb7CTPtMi3qcnUYUhbaKsjai2xocrRlvycwz1w=,tag:ASSFpCYunmCnACwhZH1jlA==,type:str]
            - ENC[AES256_GCM,data:gcPVzdJqAKz+PixMcRBmfMmBn8DdvI1mjUVqpdbhWA==,iv:a1pjzuDg00UBwQ3BdZdfm3vCH2uMDQe+U1GV7XDKfxg=,tag:ALImdn35hfkmD2M+GiW/9g==,type:str]
            - ENC[AES256_GCM,data:QXhUv4aeKKhnFpprgvpz3k0BBU0XaHbO,iv:zP0MffwSUr2L6jOq/oKQysoLai4lvsa2A3Ol+wVpWSc=,tag:Z+nLyt8i4mdEH54tcZrevQ==,type:str]
            - ENC[AES256_GCM,data:jjtyaDUMjB+ddHH9VTpocP4kG4c=,iv:/bfFJdryzmBIUlsOzPsGycoR4KhJEDxnMVXpLzaDyoM=,tag:jFFvio4iR4Htn2ejRwquig==,type:str]
            - ENC[AES256_GCM,data:C8D7hlVHqWMSnzSKpixRachEgvbbA+6bzv9Ix1MKlPsUVQ==,iv:70jmBu1Liigm99yDHHr1ypZW9PZOSys9/J/iNlwTdxw=,tag:OeuqulZVnnXc75GD8wFUqg==,type:str]
            - ENC[AES256_GCM,data:9iD5W6tzogowBY+aOfOUSlQN6sygeIHRzGgTVcCUh+qGX9Wm1csZf7g=,iv:gC8EDi1z8Pc0akKE4EAJ3sG77c3VUZ9VZBjXaKXLjpo=,tag:2fphFd9oVQNpWf9UOVlFtA==,type:str]
            - ENC[AES256_GCM,data:5ykX2GEfc1iykVoBmnaWLBflQf3FOzvpO5ieGvZEg+Ua+U0=,iv:t3Lq7HzkaZm9vii4GisXynrQLqe3nVeyMJIE0z/023s=,tag:IF+PrC0nd0u5U1JRzlS6Fw==,type:str]
            - ENC[AES256_GCM,data:VouNS9xAvAZDyHbdnpJ/hWLlqx4OadfGpiQ5m453FVA=,iv:D5EZcsvTxN1j1xqjZttFOux+U14wI9cOdiUkv9PcpkQ=,tag:qQaGvXOAOPwbmWKJ2LkqqQ==,type:str]
            - ENC[AES256_GCM,data:gTSIhy4l5m6GpeJEafXWAFfE7Q5cNJ6M,iv:HO+m8OpgS20fn51clkbSD/aJeniNR9brIqDowtkEsoQ=,tag:BtABHkUth0MMaWdAl8/kzg==,type:str]
sops:
    age:
        - recipient: age1yj3wdeleng98w9rv46yh40ettc78r9k4r4wgnx7ja5zxmyt8qe7snjg0a0
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSArUFcwRzJlWThha3hrWGRF
[...]
            MpvjdNeMO+69j+DlMjrmso1I2amtK3QAlOdvFXKUFpi94dj7AhGk9Q==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2026-04-15T17:57:51Z"
    mac: ENC[AES256_GCM,data:1Rwnyf93DfEh5+4M4DJF6aYAwRa6zWKrDOf2RFmB3aBAndSgzE6AT367/gN6OQsZbwJnzdkqKq6nCdje0iHdqwBm+4Es4J4Ux+NskjMkwcywlzGEW5BTXM3wyM/b7HGKIgTd4Mypstk8BL6RvroBzlLd4Xk07kOPVtXWCoAsh24=,iv:XBexNNZRW7Hd6Sl6KlrK5aen/GCZ8vXno9VStPgt/S8=,tag:clsDalZ5+BjWXvJrk9kOkQ==,type:str]
    encrypted_regex: ^(spec)$
    version: 3.11.0
