kubernetes/_clusters/firefly/miscellaneous/headlamp/tunnel-pr-acc-eurofiber-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pr-acc-eurofiber-web-tunnel
  namespace: misc
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: pr-acc-eurofiber-web-tunnel
  template:
    metadata:
      labels:
        app.kubernetes.io/name: pr-acc-eurofiber-web-tunnel
    spec:
      containers:
        - name: tunnel
          image: alpine:3.20
          imagePullPolicy: IfNotPresent
          command:
            - /bin/sh
            - -c
          args:
            - |
              [...]
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          readinessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 30
            periodSeconds: 30
          resources:
            requests:
              cpu: 25m
              memory: 64Mi
            limits:
              memory: 256Mi
          volumeMounts:
            - name: kubeconfigs
              mountPath: /kubeconfigs
              readOnly: true
      volumes:
        - name: kubeconfigs
          secret:
            secretName: headlamp-kubeconfigs
---
apiVersion: v1
kind: Service
metadata:
  name: pr-acc-eurofiber-web-tunnel
  namespace: misc
spec:
  selector:
    app.kubernetes.io/name: pr-acc-eurofiber-web-tunnel
  ports:
    - name: http
      port: 80
      targetPort: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pr-acc-eurofiber-web-tunnel
  namespace: misc
spec:
  ingressClassName: traefik
  rules:
    - host: test-management.tst.samenleving.org
      http: &httpBackend
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pr-acc-eurofiber-web-tunnel
                port:
                  number: 80
    - host: test-management.samenleving.org
      http: *httpBackend
    - host: time.tst.samenleving.org
      http: *httpBackend
    - host: time.samenleving.org
      http: *httpBackend
    - host: processmanager.dev.samenleving.org
      http: *httpBackend
    - host: iadministratie.iadmin.dev.samenleving.org
      http: *httpBackend
    - host: igateway.iadmin.dev.samenleving.org
      http: *httpBackend
    - host: keycloak.samenleving.org
      http: *httpBackend
  tls:
    - hosts:
        - test-management.tst.samenleving.org
        - test-management.samenleving.org
        - time.tst.samenleving.org
        - time.samenleving.org
        - processmanager.dev.samenleving.org
        - iadministratie.iadmin.dev.samenleving.org
        - igateway.iadmin.dev.samenleving.org
        - keycloak.samenleving.org
